@@ -256,3 +256,5 @@ Joe Presbrey
 Will Preston
 Nikita Kalabukhov
 Grant Byers
+Peter Doherty
+Bryan Irvine
